Fixed error in the Knight and King modules. Minor doc fixes.